creando la cabecera desde la rama cabecera

--- a/blogdehtml.html
+++ b/blogdehtml.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/gitpaginaweb.css">
 </head>
 <body>
+    <div>
+        <p>PUES ESTO DEBERIA DE SER LA CABECERA CREADA DESDE LA RAMA CABECERA</p>
+    </div>
     <h1>aqui vamos ha hacer cosas </h1>
     <p>pues este es el texto de nuestra pagina web </p>
 </body>
