ahora se modifico lo mismo para probar el conflicto con la rama cabecera

--- a/blogdehtml.html
+++ b/blogdehtml.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1>pues esto va  a ser para meterle mas a ala cabecera solo para vercosas </h1>
+        <h1>pues esto va  a ser para meterle mas a ala cabecera solo para modificada tambien </h1>
         <p>PUES ESTO DEBERIA DE SER LA CABECERA CREADA DESDE LA RAMA CABECERA</p>
     </div>
     <h1>aqui vamos ha hacer cosas </h1>
